// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Label renders a custom asterisk 1`] = `
<body>
  <div>
    <label
      class="group/fui-label"
      data-size="medium"
      data-testid="label-id"
    >
      I'm a label
      <span
        aria-hidden="true"
        class=""
      >
        foo
      </span>
    </label>
  </div>
</body>
`;

exports[`Label renders a default state 1`] = `
<div>
  <label
    class="group/fui-label"
    data-size="medium"
  >
    Default Label
  </label>
</div>
`;
